--- a/css/style.css
+++ b/css/style.css
@@ -1116,7 +1116,7 @@ figure.dotted-bg {
   font-size: 14px; }
   .post-entry .post-meta a {
     color: #000000; }
-
+/* 
 .lines-wrap {
   position: fixed;
   z-index: -1;
@@ -1143,7 +1143,7 @@ figure.dotted-bg {
       right: 33.333333%;
       height: 100%;
       border-left: 1px solid #efefef;
-      border-right: 1px solid #efefef; }
+      border-right: 1px solid #efefef; } */
 
 #about-section {
   margin-top: 7rem; }
