--- a/css/style.css
+++ b/css/style.css
@@ -807,12 +807,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     fill: none; }
 
 .testimonial-wrap .owl-stage-outer {
-  padding-top: 7rem;
+  padding-top: 3rem;
   padding-bottom: 5rem; }
 
 .testimonial-v1 {
   text-align: center;
-  padding: 10px;
+  /* padding: 10px; */
   /* border: 1px solid #f8f9fa; */
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
@@ -823,7 +823,10 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     width: 300px !important;
     border-radius: 50%;
     margin: 0 auto 10px auto;
-    margin-top: -70px; }
+    margin-top: -70px;
+    vertical-align: middle;
+    height: 200px;
+   }
   .testimonial-v1 h3 {
     font-size: 16px;
     font-weight: 700;
