--- a/css/style.css
+++ b/css/style.css
@@ -818,14 +818,14 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   -o-transition: .3s all ease;
   transition: .3s all ease;
   position: relative;
-  border-radius: 10px; }
+  /* border-radius: 10px; */ }
   .testimonial-v1 img {
-    width: 300px !important;
+    width: 250px !important;
     border-radius: 50%;
     margin: 0 auto 10px auto;
     margin-top: -70px;
     vertical-align: middle;
-    height: 200px;
+    height: 180px;
    }
   .testimonial-v1 h3 {
     font-size: 16px;
