--- a/css/style.css
+++ b/css/style.css
@@ -801,7 +801,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     width: 90px;
     height: 20px; }
   .wave path {
-    stroke: #0389ff;
+    stroke: #e81c24;
     stroke-width: 2px;
     stroke-linecap: round;
     fill: none; }
@@ -820,7 +820,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   position: relative;
   /* border-radius: 10px; */ }
   .testimonial-v1 img {
-    width: 250px !important;
+    width: 200px !important;
     border-radius: 50%;
     margin: 0 auto 10px auto;
     margin-top: -70px;
@@ -1151,7 +1151,8 @@ figure.dotted-bg {
 #about-section {
   margin-top: 7rem; }
   #about-section .container {
-    background: #0389ff;
+    background: #e81c24;
+    color: white;
     padding-top: 50px;
     padding-bottom: 50px;
     padding-left: 50px;
@@ -1548,7 +1549,7 @@ figure.dotted-bg {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.2); }
     .owl-single .owl-dots .owl-dot.active span, .owl-carousel .owl-dots .owl-dot.active span {
-      background: #0389ff; }
+      background: #e81c24; }
 
 .owl-single.no-dots .owl-dots, .owl-carousel.no-dots .owl-dots {
   display: none; }
@@ -1632,9 +1633,9 @@ figure.dotted-bg {
     position: relative;
     display: inline-block; }
     .site-footer a:hover {
-      color: #0389ff; }
+      color: #e81c24; }
       .site-footer a:hover:before {
-        background: #0389ff; }
+        background: #e81c24 }
   .site-footer .btn:before {
     display: none; }
   .site-footer .widget {
@@ -1654,7 +1655,7 @@ figure.dotted-bg {
       width: 30px;
       height: 30px;
       position: relative;
-      background: #0389ff;
+      background: #e81c24;
       border-radius: 50%;
       color: #ffffff; }
       .site-footer .social li a:before {
@@ -1667,5 +1668,5 @@ figure.dotted-bg {
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%); }
       .site-footer .social li a:hover {
-        background: #36a1ff;
+        background: #b30f14;
         color: #ffffff; }
